[project]
name = "y2cl_worksheet"
version = "0.1.0"
description = "Imperial Year 2 Physics Computing Lab."
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE.txt"}
authors = [
  {name = "Alexander Richards", email = "a.richards@imperial.ac.uk"}
]
maintainers = [
  {name = "Alexander Richards", email = "a.richards@imperial.ac.uk"}
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]

dependencies = [
  "numpy",
  "scipy",
  "matplotlib",
  "pytest"
]
